latest i18n data from Transifex

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -40,10 +40,10 @@ de-AT = Tedesco (Austriaco)
 de-CH = Tedesco (Svizzero)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (disattiva)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Regole non attive - premere per riattivarle\:
 
 desc_comma_whitespace = Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Ripetizione dello spazio (brutta formattazione)
 
 desc_spelling = Probabile errore di battitura
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Possibile errore di battitura (senza suggerimenti)
 
 desc_spelling_short = Errore di battitura
 
@@ -259,4 +259,4 @@ guiWarning = Avvertenza
 
 guiDuplicate = File di regole duplicato\!
 
-# ja = Japanese
+ja = Giapponese
