--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Powt\u00f3rzenie spacji (b\u0142\u0119dne formatowan
 
 desc_spelling = Prawdopodobny b\u0142\u0105d pisowni
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Mo\u017cliwy b\u0142\u0105d pisowni (bez podpowiedzi)
 
 desc_spelling_short = B\u0142\u0119dna pisownia
 
