--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -33,17 +33,17 @@ da = Danez\u0103
 
 de = German\u0103
 
-# de-DE = German (Germany)
+de-DE = German\u0103 (Germania)
 
-# de-AT = German (Austrian)
+de-AT = German\u0103 (Asturia)
 
-# de-CH = German (Swiss)
+de-CH = German\u0103 (Elve\u021bia)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (dezactivare)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Reguli dezactivate - click pentru activare
 
 desc_comma_whitespace = Spa\u021bii puse \u00eenainte de virgul\u0103 sau \u00eenainte/dup\u0103 paranteze
 
@@ -67,31 +67,31 @@ desc_uppercase_sentence = Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu
 
 desc_whitespacerepetition = Spa\u021biu repetat (formatare gre\u0219it\u0103)
 
-# desc_spelling = Possible spelling mistake
+desc_spelling = Posibil\u0103 gre\u0219eal\u0103 de ortografie
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Posibil\u0103 gre\u0219eal\u0103 de ortografie (nu exist\u0103 sugestii)
 
-# desc_spelling_short = Spelling mistake
+desc_spelling_short = Gre\u0219eal\u0103 de ortografie
 
 double_dots_short = Dou\u0103 puncte consecutive
 
 double_commas_short = Dou\u0103 virgule consecutive
 
-# el = Greek
+el = Greac\u0103
 
 en = Englez\u0103
 
-# en-AU = English (Australian)
+en-AU = Englez\u0103 (Australia)
 
-# en-GB = English (British)
+en-GB = Englez\u0103 (Marea Britanie)
 
-# en-US = English (American)
+en-US = Englez\u0103 (SUA)
 
-# en-CA = English (Canadian)
+en-CA = Englez\u0103 (Canada)
 
-# en-NZ = English (New Zealand)
+en-NZ = Englez\u0103 (Noua Zeeland\u0103)
 
-# en-ZA = English (South African)
+en-ZA = Englez\u0103 (Africa de Sud)
 
 enterText = V\u0103 rug\u0103m s\u0103 tasta\u021bi sau s\u0103 lipi\u021bi textul de verificat \u00een zona de sus
 
@@ -221,7 +221,7 @@ sl = Sloven\u0103
 
 space_after_comma = Pune un spa\u021biu dup\u0103 virgul\u0103, dar nu \u00eenainte de virgul\u0103
 
-# spelling = Possible spelling mistake found
+spelling = S-a g\u0103sit o posibil\u0103 gre\u0219eal\u0103 de ortografie
 
 startChecking = Verificarea \u00eencepe \u00een {0}
 
@@ -239,7 +239,7 @@ uk = Ucrainean\u0103
 
 unpaired_brackets = Parantez\u0103 nepereche
 
-# useGUIConfig = Use above settings for the server
+useGUIConfig = Folose\u0219te set\u0103rile de mai sus pentru server
 
 whitespace_repetition = Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un spa\u021biu
 
@@ -247,16 +247,16 @@ ro = Rom\u00e2n\u0103
 
 zh = Chinez\u0103
 
-# moreInfo = More info\:
+moreInfo = Mai multe informa\u021bii\:
 
-# pt = Portuguese
+pt = Portughez\u0103
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portughez\u0103 (Brazilia)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portughez\u0103 (Portugalia)
 
-# guiWarning = Warning
+guiWarning = Avertisment
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Fi\u0219ier de reguli duplicat\!
 
-# ja = Japanese
+ja = Japonez\u0103
