set version to 2.0-dev

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -1,5 +1,10 @@
 LanguageTool Change Log
 
+2.0-dev (release planned for 2012-12-30)
+
+ -...
+
+
 1.9 (2012-09-30)
 
  -Breton:
@@ -7,7 +12,7 @@ LanguageTool Change Log
    -the internal spelling engine can now additionally tokenize words if the
     source dictionary did not include compound versions (for example,
     hyphenated words).
-  - updated classification of words tagged as plural nouns of persons
+   -updated classification of words tagged as plural nouns of persons
     (these have different mutation than other nouns).
 
  -Catalan:
