API: Language.getLanguageForShortName() now consistently throws an exception if the given language code is not known; also don't print usage on parameter problem, only print the error

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 2.0-dev (release planned for 2012-12-30)
 
- -...
+ -API: Language.getLanguageForShortName() now consistently throws an exception
+  if the given language code is not known
 
 
 1.9 (2012-09-30)
