avoid ConcurrentModificationException when changing the configuration while LT check is running (Sourceforge bug 3572536)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,8 @@ LanguageTool Change Log
 
 2.0-dev (release planned for 2012-12-30)
 
+ -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
+
  -API: Language.getLanguageForShortName() now consistently throws an exception
   if the given language code is not known
 
