[es] several new rules, thanks to Alexander Socop Arango

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,9 @@ LanguageTool Change Log
 
 2.0-dev (release planned for 2012-12-30)
 
+ -Spanish:
+   -several new rules (thanks to Alexander Socop Arango)
+
  -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
 
  -API: Language.getLanguageForShortName() now consistently throws an exception
