--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,6 +5,9 @@ LanguageTool Change Log
  -Spanish:
    -several new rules (thanks to Alexander Socop Arango)
 
+ -Russian:
+   -improve some rules
+
  -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
 
  -API: Language.getLanguageForShortName() now consistently throws an exception
