Some initial work based on new Ukrainian pos tagger dictionary

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/uk/README
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/uk/README
@@ -1,40 +1,7 @@
 In this directory initial fsa files for Ukrainian dictionary will reside.
 
-Currently the only tagger available is based on myspell uk_UA.dic dictionary.
-It provides three POS tags "noun", "verb" and "adj" but only for lemmas (no inflection engine yet).
-It also provides "plural" tag for nouns which can be only plural.
+Currently the only POS tag dictionary is under development, it's based on spell-uk
+project and includes some words that start with А. Also there are some words added
+for the grammar rule tests.
 
-Download dictionary from from http://dict.linux.org.ua/other/uk_UA.dic.bz2 
-and unpack it in this directory.
-
-
-Список теґів (pos tags):
-
-1. підтримуються:
-noun	іменник
-verb	дієслово
-adj		прикметник
-
-2. Плануються:
-plural	множина (підтримується зараз для іменників тільки множини)
-single	однина
-
-musc	чоловічий
-fem		жіночий
-neut	середній
-
-  відмінки:
-v_naz
-v_rod
-v_dav
-v_zna
-v_oru
-v_mis
-v_kly
-
-future	майбутній час
-past	минулий час
-present	теперішній час
-
-refl	зворотня форма (дієслова)
-
+See tagset.txt for description of the tags. 
