- updated CHANGES.txt for French and Breton.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,13 @@ LanguageTool Change Log
 
 2.0-dev (release planned for 2012-12-30)
 
+ -Breton
+  -updated classification of words tagged as plural nouns of persons
+   (these have different mutation than other nouns).
+
+ -French:
+  -fixed false alarms
+
  -Spanish:
    -several new rules (thanks to Alexander Socop Arango)
 
