Fixed bug "Tray icon too big sometimes"

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -10,15 +10,18 @@ LanguageTool Change Log
   -fixed false alarms
 
  -Spanish:
-   -several new rules (thanks to Alexander Socop Arango)
+  -several new rules (thanks to Alexander Socop Arango)
 
  -Russian:
-   -improve some rules
+  -improve some rules
+  -several new rules
 
  -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
 
  -API: Language.getLanguageForShortName() now consistently throws an exception
   if the given language code is not known
+
+ -stand-alone GUI: Fixed bug "Tray icon too big sometimes" (Sourceforge #3573078)
 
 
 1.9 (2012-09-30)
