add http api autodetect to changes.txt

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -20,6 +20,8 @@ LanguageTool Change Log
 
  -API: Language.getLanguageForShortName() now consistently throws an exception
   if the given language code is not known
+ 
+ -HTTP API: support for auto-detecting text language (parameter autodetect=1)
 
  -stand-alone GUI: Fixed bug "Tray icon too big sometimes" (Sourceforge #3573078)
 
