latest i18n data from Transifex

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -120,7 +120,7 @@ gl = Galego
 guiAddButton=Adicionar...
 guiCancelButton = Cancelar
 
-guiCheckComplete = A verifica\u00e7\u00e3o do LanguageTool conclu\u00edda.
+guiCheckComplete = Verifica\u00e7\u00e3o do LanguageTool conclu\u00edda.
 guiCloseButton=Fechar
 
 guiConfigWindowTitle = Op\u00e7\u00f5es de LanguageTool
