new embedded server with support for SSL, fixes sourceforge bug #3430470; this changes the API a bit but I assume almost nobody uses HTTPServer as a Java API

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,6 +23,12 @@ LanguageTool Change Log
  
  -HTTP API: support for auto-detecting text language (parameter autodetect=1)
 
+ -HTTP API: added HTTPSServer, a lightweight embedded HTTPS server which works like HTTPServer
+  but supports SSL encryption. This server supports *only* https, not http.
+
+ -HTTP API: the Java API of HTTPServer has been modified in incompatible ways. You might get
+  compile errors if you have used this class from your Java code.
+
  -stand-alone GUI: Fixed bug "Tray icon too big sometimes" (Sourceforge #3573078)
 
 
