make error message use i18n text

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -253,10 +253,12 @@ pt = Portuguese
 
 pt-BR = Portuguese (Brazil)
 
-pt-PT = Portuguese (Portugal) 
+pt-PT = Portuguese (Portugal)
 
 guiWarning = Warning
 
 guiDuplicate = Duplicate rule file!
 
 ja = Japanese
+
+language_not_supported = Error: Sorry, the document language "{0}" is not supported by LanguageTool.
