[ru] update dict

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -15,6 +15,7 @@ LanguageTool Change Log
  -Russian:
   -improve some rules
   -several new rules
+  -updated POS dictionary (fix wrong POS Tags)
 
  -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
 
