[PT] Added information about: a) 100s of compounds b) rules added/improved c) PT-pt dictionary is pre-agreement    To use post-agreement, use PT-br

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -11,6 +11,13 @@ LanguageTool Change Log
 
  -Spanish:
   -several new rules (thanks to Alexander Socop Arango)
+  
+ -Portuguese
+  -Added hundreds of compound words taken from a huge Porto Editora dictionary 
+   I am looking word by word, page by page.
+  -Added/improved several rules
+  -Replaced the current dictionary with PT-pt (pre-language agreement).
+   To use the post-language agreement, use the PT-br one.
 
  -Russian:
   -improve some rules
