[br] updated CHANGES.txt for Breton.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -3,6 +3,7 @@ LanguageTool Change Log
 2.0-dev (release planned for 2012-12-30)
 
  -Breton
+  -several new rules and fixed false alarms
   -updated classification of words tagged as plural nouns of persons
    (these have different mutation than other nouns).
 
