[fr] updated POS tag lexicon to use dicollecte-4.8.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -8,6 +8,7 @@ LanguageTool Change Log
    (these have different mutation than other nouns).
 
  -French:
+  -updated POS tag dictionary to use Dicollecte-4.8
   -fixed false alarms
 
  -Spanish:
