[ca] Several new rules. Fixed false alarms. Document changes in CHANGES.txt.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,10 +2,15 @@ LanguageTool Change Log
 
 2.0-dev (release planned for 2012-12-30)
 
- -Breton
+ -Breton:
   -several new rules and fixed false alarms
   -updated classification of words tagged as plural nouns of persons
    (these have different mutation than other nouns).
+ 
+ -Catalan:
+  -many new rules
+  -fixed false alarms
+  -multiple fixes and additions in the tagger dictionary  
 
  -French:
   -updated POS tag dictionary to use Dicollecte-4.8
@@ -14,7 +19,7 @@ LanguageTool Change Log
  -Spanish:
   -several new rules (thanks to Alexander Socop Arango)
   
- -Portuguese
+ -Portuguese:
   -Added hundreds of compound words taken from a huge Porto Editora dictionary 
    I am looking word by word, page by page.
   -Added/improved several rules
