--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -56,6 +56,9 @@ LanguageTool Change Log
  -HTTP API: the Java API of HTTPServer has been modified in incompatible ways. You might get
   compile errors if you have used this class from your Java code.
 
+ -stand-alone GUI: the tray icon menu (reachable with the right mouse button on the tray
+  icon) now has a checkbox to enable the embedded HTTP server
+
  -stand-alone GUI: Fixed bug "Tray icon too big sometimes" (Sourceforge #3573078)
 
 
