--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -263,9 +263,9 @@ ja = Japanese
 
 language_not_supported = Error: Sorry, the document language "{0}" is not supported by LanguageTool.
 
-http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1} - maybe something else is running on that port already?
+http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 
-https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1} - maybe something else is running on that port already?
+https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 
 https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
 
