[en] use the same word tokenizer again as other European languages - avoids code duplication

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -31,6 +31,9 @@ LanguageTool Change Log
   -several new rules
   -updated POS dictionary (fix wrong POS Tags)
 
+ -English:
+  -uses the same word tokenizer again as other European languages
+
  -OpenOffice/LibreOffice: Fixed ConcurrentModificationException (Sourceforge bug #3572536)
 
  -API: Language.getLanguageForShortName() now consistently throws an exception
