stand-alone GUI: the tray icon will show a small "S" symbol when the server is running

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -62,6 +62,8 @@ LanguageTool Change Log
  -stand-alone GUI: the tray icon menu (reachable with the right mouse button on the tray
   icon) now has a checkbox to enable the embedded HTTP server
 
+ -stand-alone GUI: the tray icon will show a small "S" symbol when the server is running
+
  -stand-alone GUI: Fixed bug "Tray icon too big sometimes" (Sourceforge #3573078)
 
 
