--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -270,3 +270,5 @@ https_server_start_failed = LanguageTool HTTPS server could not be started on ho
 https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
 
 tray_menu_enable_server = Run HTTP server
+
+tray_tooltip_server_running = LanguageTool (HTTP server running)
