make Tools.median() private, as it should not have been public anyway (it's not used anywhere outside Tools)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -39,6 +39,8 @@ LanguageTool Change Log
  -API: Language.getLanguageForShortName() now consistently throws an exception
   if the given language code is not known
 
+ -API: Tools.median() is now private (it was accidentally made public)
+
  -HTTP API: the XML we return now contains a new attribute "locqualityissuetype", which
   is the "Localization Quality Issue Type" in the upcoming Internationalization Tag Set (ITS)
   Version 2.0 standard from W3C. This means errors are now categorized according to
