more code cleanup; add separators to the menu; improve order of menu items

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -132,7 +132,7 @@ guiMatchCount = Potential errors\:
 
 guiMenuAbout = &About...
 
-guiMenuAddRules = Load &Rule File
+guiMenuAddRules = Load &Rule File...
 
 guiMenuCheckClipboard = &Check Text in Clipboard
 
