fix sf bug#3479817

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -33,6 +33,7 @@ LanguageTool Change Log
 
  -English:
   -uses the same word tokenizer again as other European languages
+  -fix Sourceforge bug #3479817 (capitalizion the first item of a list not required)
 
  -OpenOffice/LibreOffice integration:
   -Fixed ConcurrentModificationException (Sourceforge bug #3572536)
