[ca] updated CHANGES.txt

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -10,7 +10,10 @@ LanguageTool Change Log
  -Catalan:
   -many new rules
   -fixed false alarms
-  -multiple fixes and additions in the tagger dictionary  
+  -multiple fixes and additions in the tagger dictionary 
+  -Hyphen is used as a word separator, as this is very common in web pages. This way some 
+   ambiguities cannot be solved if the typography rule substituting hyphen for dash is disabled.
+   (For example: Dir-li -ho és important.)  
 
  -French:
   -updated POS tag dictionary to use Dicollecte-4.8
