[de] new rules: harmonisieren, Teufelkskreislauf, Masseuse; tiny changes to existing rules; document changes in German rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -13,11 +13,14 @@ LanguageTool Change Log
   -multiple fixes and additions in the tagger dictionary 
   -Hyphen is used as a word separator, as this is very common in web pages. This way some 
    ambiguities cannot be solved if the typography rule substituting hyphen for dash is disabled.
-   (For example: Dir-li -ho és important.)  
+   (For example: Dir-li -ho és important.)
 
  -French:
   -updated POS tag dictionary to use Dicollecte-4.8
   -fixed false alarms
+
+ -German:
+   -several new rules and rule updates
 
  -Spanish:
   -several new rules (thanks to Alexander Socop Arango)
@@ -36,7 +39,7 @@ LanguageTool Change Log
 
  -English:
   -uses the same word tokenizer again as other European languages
-  -fix Sourceforge bug #3479817 (capitalizion the first item of a list not required)
+  -fix Sourceforge bug #3479817 (capitalization the first item of a list not required)
 
  -OpenOffice/LibreOffice integration:
   -Fixed ConcurrentModificationException (Sourceforge bug #3572536)
