- added Esperanto in CHANGES.txt for the 2.0 release. - order languages alphabetically in CHANGES.txt for the 2.0 release   and minor other updates to CHANGES.txt.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,16 +4,24 @@ LanguageTool Change Log
 
  -Breton:
   -several new rules and fixed false alarms
+  -updated POS dictionary (fix wrong POS tags)
   -updated classification of words tagged as plural nouns of persons
    (these have different mutation than other nouns).
- 
+
  -Catalan:
   -many new rules
   -fixed false alarms
-  -multiple fixes and additions in the tagger dictionary 
-  -Hyphen is used as a word separator, as this is very common in web pages. This way some 
+  -multiple fixes and additions in the tagger dictionary
+  -Hyphen is used as a word separator, as this is very common in web pages. This way some
    ambiguities cannot be solved if the typography rule substituting hyphen for dash is disabled.
    (For example: Dir-li -ho és important.)
+
+ -English:
+  -uses the same word tokenizer again as other European languages
+  -fix Sourceforge bug #3479817 (capitalization the first item of a list not required)
+
+ -Esperanto
+  -few new rules
 
  -French:
   -updated POS tag dictionary to use Dicollecte-4.8
@@ -22,11 +30,8 @@ LanguageTool Change Log
  -German:
    -several new rules and rule updates
 
- -Spanish:
-  -several new rules (thanks to Alexander Socop Arango)
-  
  -Portuguese:
-  -Added hundreds of compound words taken from a huge Porto Editora dictionary 
+  -Added hundreds of compound words taken from a huge Porto Editora dictionary
    I am looking word by word, page by page.
   -Added/improved several rules
   -Replaced the current dictionary with PT-pt (pre-language agreement).
@@ -37,9 +42,8 @@ LanguageTool Change Log
   -several new rules
   -updated POS dictionary (fix wrong POS Tags)
 
- -English:
-  -uses the same word tokenizer again as other European languages
-  -fix Sourceforge bug #3479817 (capitalization the first item of a list not required)
+ -Spanish:
+  -several new rules (thanks to Alexander Socop Arango)
 
  -OpenOffice/LibreOffice integration:
   -Fixed ConcurrentModificationException (Sourceforge bug #3572536)
